sobreescribiendo tipo de letra de los numeros en los graficos de burbuja

--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -15,7 +15,8 @@
     margin-top: 0 !important;
 }
 
-.info-box-number{
+.info-box-number,
+.bubbletree .bubbletree-amount{
     font-family: Roboto, sans-serif;
 }
 
