sobreescribiendo tipo de letra de los numeros de timeline de informacion historica

--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -16,7 +16,8 @@
 }
 
 .info-box-number,
-.bubbletree .bubbletree-amount{
+.bubbletree .bubbletree-amount,
+.events{
     font-family: Roboto, sans-serif;
 }
 
