correccion de escritura y agregando margen a boton

--- a/core/templates/ogm_chart.html
+++ b/core/templates/ogm_chart.html
@@ -398,7 +398,7 @@
             <div class="row">
                 <div class="col-md-12 text-center big">
                     <button id="show-detail-2" class="blanco btn pma-bg-blue more" type="submit">
-                        Ver dealles en tabla
+                        Ver detalles en tabla
                     </button>
                 </div>
             </div>
@@ -703,7 +703,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-12 text-center">
+                <div class="col-md-12 text-center mb-5px">
                     <button id="show-detail-3" class="blanco btn pma-bg-blue more" type="submit">
                         Ver detalles en tabla
                     </button>
