--- a/core/static/css/own.css
+++ b/core/static/css/own.css
@@ -1,73 +1,119 @@
-.font-13px{
+.font-13px {
     font-size: 13px;
 }
-.font-17px{
+
+.font-17px {
     font-size: 17px;
 }
-.height-rubro-home{
+
+.height-rubro-home {
     min-height: 70px;
     height: 170px;
 }
-.mb-1px{
+
+.mb-1px {
     margin-bottom: 1px !important;
 }
-.mb-5px{
+
+.mb-5px {
     margin-bottom: 5px;
 }
-.mt-0{
+
+.mt-0 {
     margin-top: 0 !important;
 }
 
 .info-box-number,
 .bubbletree .bubbletree-amount,
-.events{
+.events {
     font-family: Roboto, sans-serif;
 }
 
-.tb-details{
+.tb-details {
 }
 
 .tb-details thead tr th:nth-child(1),
 .tb-details thead tr td:nth-child(1),
 .tb-details tbody tr th:nth-child(1),
-.tb-details tbody tr td:nth-child(1){
+.tb-details tbody tr td:nth-child(1) {
     border-right: 1px solid #ddd;
 }
-.tb-details > tbody tr:nth-child(1) td{
+
+.tb-details > tbody tr:nth-child(1) td {
     padding-left: 2px;
     border-top: none !important;
 }
-.font-color-yellow{
+
+.font-color-yellow {
     color: yellow;
 }
 
-.ver-mas{
+.ver-mas {
     height: 65px;
     width: 65px;
     padding-top: 10px;
 }
 
-.no-border-top{
+.no-border-top {
     border-top: none !important;
 }
 
-.no-border-bottom{
+.no-border-bottom {
     border-bottom: none !important;
 }
-.border-sides{
+
+.border-sides {
     border-right: 1px solid #ddd !important;
     border-left: 1px solid #ddd !important;
 }
-.border-left{
+
+.border-left {
     border-left: 1px solid #ddd !important;
 }
-.border-right{
+
+.border-right {
     border-right: 1px solid #ddd !important;
 }
 
-.background-color-gray{
+.background-color-gray {
     background-color: #f3f3f3;
 }
-.background-color-white{
+
+.background-color-white {
     background-color: #fff;
+}
+
+.icon-wrapper {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+/*TABS*/
+.tabs-left {
+    border-bottom: none;
+}
+
+.tabs-left > li {
+    float: none;
+    margin: 0;
+}
+
+.tabs-left > li.active > a,
+.tabs-left > li.active > a:hover,
+.tabs-left > li.active > a:focus {
+    background-color: transparent !important;
+    border-bottom-color:  transparent !important;
+    border-right-color: transparent;
+    border: none;
+    border-radius: 0;
+    margin: 0;
+}
+
+.tabs-left > li.active > a > span{
+    color: #00a7b3;
+}
+
+.height-categoria{
+    height: 115px;
 }
