--- a/core/templates/inversionpiechart.html
+++ b/core/templates/inversionpiechart.html
@@ -4,39 +4,123 @@
 {% load core_extras %}
 {% load mathfilters %}
 
+{% block charts %}
+    <div class="col-lg-12 col-md-12 col-sm-12">
+        <div role="tabpanel">
+            <div class="row">
+                <!-- Nav tabs -->
+                <div class="chart-update col-lg-1 col-md-1 col-sm-1 col-xs-1 mt-0">
+                    <ul class="nav nav-tabs tabs-left sideways" role="tablist">
+                        <li class="active">
+                            <a href="#home" aria-controls="home" role="tab"
+                               data-toggle="tab">
+                                  <span class="pma-icon fa fa-info-circle pma-fg-gray"
+                                        aria-hidden="true" id="chart-bubble-1"
+                                        data-chartcontainer="bubble-1">
+                                  </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#profile" aria-controls="profile" role="tab"
+                               data-toggle="tab">
+                                <span id="chart-pie-1"
+                                      class="pma-icon pe-7s-graph pma-fg-gray"
+                                      data-chartcontainer="pie">
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">
+                                 <span id="chart-bar-1"
+                                       class="pma-icon pe-7s-graph3 pma-fg-gray"
+                                       data-chartcontainer="bar">
+                                 </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">
+                                    <span id="table"
+                                          class="pma-icon fa fa-table pma-fg-gray"
+                                          data-chartcontainer="table">
+                                    </span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-lg-10 col-md-10 col-sm-11 col-xs-11">
+                    <!-- Tab panes -->
+                    <div class="tab-content">
+                        <div class="tab-pane pma-summary pma-index-inversion-icons  active" id="home">
+                            <div class="row categorias_inversion">
+                                <div class="col-xs-12 col-sm-12 col-md-12">
+                                    {% for i in bubble_data.children %}
+                                        <div class="icons-inversion col-xs-6 col-sm-2 col-md-2 text-center height-categoria">
+                                            <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.name }}">
+                                                <span class="info-box-icon pma-icon {{ i.slug }}"></span>
+                                            </a>
+                                            <h5 class="text-center">
+                                                <a href="/core/plan-de-inversion?inversion__anio={{ year }}&inversion__periodo={{ periodo }}&catinversion={{ i.name }}"
+                                                   class="">
+                                                    <strong>{{ i.label }}</strong>
+                                                </a>
+                                                <br/>
+                                                <span class="font-17px">{{ i.amount }}</span>
+                                            </h5>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab-pane" id="profile">
+                            <div id="pie" class="view-alternative"> Chart will be rendered here</div>
+                        </div>
+                        <div class="tab-pane" id="messages">
+                            <div id="bar" class="view-alternative"> Chart will be rendered here</div>
+                        </div>
+                        <div class="tab-pane" id="settings">
+                            <table class="table table-striped table-hover">
+                                <thead>
+                                <tr class="bg-primary">
+                                    <th>Clasificación</th>
+                                    {% if periodo_list|keyvalue:year == 'I' %}
+                                        <th class="text-right">Inicial</th>
+                                    {% else %}
+                                        <th class="text-right">Ejecutado</th>
+                                    {% endif %}
+                                </tr>
+                                </thead>
+                                {% for row in cat %}
+                                    <tr>
+                                        <td class="text-left">{{ row.catinversion__nombre }}</td>
+                                        {% if periodo_list|keyvalue:year == 'I' %}
+                                            <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
+                                        {% else %}
+                                            <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
+                                        {% endif %}
+                                    </tr>
+                                {% endfor %}
+                                <tfoot>
+                                <tr class="">
+                                    <td>TOTAL</td>
+                                    {% if periodo_list|keyvalue:year == 'I' %}
+                                        <td class="text-right">{{ asignado|million|intcomma }}</td>
+                                    {% else %}
+                                        <td class="text-right">{{ ejecutado|million|intcomma|default:"0" }}</td>
+                                    {% endif %}
+                                </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+{% endblock %}
+
 {% block main_table %}
-    <table class="table table-striped table-hover">
-        <thead>
-        <tr class="bg-primary">
-            <th>Clasificación</th>
-            {% if periodo_list|keyvalue:year == 'I' %}
-                <th class="text-right">Inicial</th>
-            {% else %}
-                <th class="text-right">Ejecutado</th>
-            {% endif %}
-        </tr>
-        </thead>
-        {% for row in cat %}
-            <tr>
-                <td class="text-left">{{ row.catinversion__nombre }}</td>
-                {% if periodo_list|keyvalue:year == 'I' %}
-                    <td class="text-right">{{ row.inicial_asignado|million|intcomma }}</td>
-                {% else %}
-                    <td class="text-right">{{ row.ejecutado|million|intcomma }}</td>
-                {% endif %}
-            </tr>
-        {% endfor %}
-        <tfoot>
-        <tr class="">
-            <td>TOTAL</td>
-            {% if periodo_list|keyvalue:year == 'I' %}
-                <td class="text-right">{{ asignado|million|intcomma }}</td>
-            {% else %}
-                <td class="text-right">{{ ejecutado|million|intcomma|default:"0" }}</td>
-            {% endif %}
-        </tr>
-        </tfoot>
-    </table>
+
 {% endblock %}
 
 {% block section2 %}
@@ -259,6 +343,28 @@
                                 <td class="text-right">
                                     {% if numerador > 0 %}
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
                                     {% with numerator=otros|total_sum:'asignado' denominator=otros|total_sum:'poblacion' %}
                                          {{ numerator|div:denominator|floatformat:2|intcomma }} {% endwith %}
                                     {% endif %}
@@ -266,6 +372,28 @@
                                 {% if year != '2016' %}
                                 <td class="text-right">
                                     {% if denominador > 0 %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
                                     {% with numerator=otros|total_sum:'ejecutado' denominator=otros|total_sum:'poblacion' %}
                                          {{ numerator|div:denominator|floatformat:2|intcomma }} {% endwith %}
