--- a/core/templates/_indicator.html
+++ b/core/templates/_indicator.html
@@ -339,7 +339,7 @@
     <script type="text/javascript" src="{% static 'js/income.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/expense.js' %}"></script>
     <script type="text/javascript">
-        var data = {{ bubble_data_json|safe }};
+        var data = {{ bubble_data|safe }};
     </script>
     <script type="text/javascript" src="{% static 'js/pma-bubbletree.js' %}"></script>
     <script>
